updated contact page Facebook and instagram logos and fixed the overlapping responsiveness

--- a/public/styles/alphabetical.css
+++ b/public/styles/alphabetical.css
@@ -311,7 +311,7 @@ article h1 {
 
 .back-button {
     position: absolute; 
-    top: 30px; 
+    top: 40px; 
     left: 30px; 
 
    
@@ -319,6 +319,7 @@ article h1 {
 
 .back-button a {
    background-color: white; 
+    color: #bcbcbc; 
     border: 2px solid #bcbcbc; 
     padding: 10px 15px; 
     border-radius: 5px; 
@@ -339,6 +340,11 @@ article h1 {
 }
 
 
+
+main article .mySlides img {
+    width: 100%; 
+    
+}
 
 
 
